feat: complete overhaul of practice, mastery, and dashboard UI with premium layout, animations, and robust recommendation algorithms